--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name":        "jump.js",
-  "version":     "1.0.1",
+  "name":        "jump.js-cancelable",
+  "version":     "1.1.0-alpha",
   "description": "A small, modern, dependency-free smooth scrolling library.",
-  "homepage":    "https://github.com/callmecavs/jump.js",
+  "homepage":    "https://github.com/bretkikehara/jump.js",
   "main":        "dist/jump.min.js",
   "jsnext:main": "src/jump.js",
 
@@ -11,10 +11,10 @@
 
   "repository": {
     "type": "git",
-    "url":  "https://github.com/callmecavs/jump.js.git"
+    "url":  "https://github.com/bretkikehara/jump.js"
   },
   "bugs": {
-    "url": "https://github.com/callmecavs/jump.js/issues"
+    "url": "https://github.com/bretkikehara/jump.js/issues"
   },
 
   "keywords": [
