--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name":        "jump.js-cancelable",
-  "version":     "1.1.3-alpha",
+  "name": "jump.js",
+  "version": "2.0.0",
   "description": "A small, modern, dependency-free smooth scrolling library.",
-  "homepage":    "https://github.com/bretkikehara/jump.js",
-  "main":        "dist/jump.min.js",
+  "homepage": "https://github.com/callmecavs/jump.js",
+  "main": "dist/jump.min.js",
   "jsnext:main": "src/jump.js",
-
-  "author":  "Michael Cavalea",
+  "author": "Michael Cavalea",
   "license": "MIT",
-
   "repository": {
     "type": "git",
-    "url":  "https://github.com/bretkikehara/jump.js"
+    "url": "https://github.com/callmecavs/jump.js"
   },
   "bugs": {
-    "url": "https://github.com/bretkikehara/jump.js/issues"
+    "url": "https://github.com/callmecavs/jump.js/issues"
   },
-
   "keywords": [
-    "scroll"
+    "scroll",
+    "smooth"
   ],
-
   "devDependencies": {
-    "babel-preset-es2015-rollup": "*",
-    "browser-sync":               "*",
-    "del":                        "*",
-    "gulp":                       "*",
-    "node-notifier":              "*",
-    "rollup":                     "*",
-    "rollup-plugin-babel":        "*",
-    "rollup-plugin-uglify":       "*"
+    "babel-preset-es2015": "*",
+    "rollup-plugin-babel": "*",
+    "babel-plugin-external-helpers" : "*",
+    "browser-sync": "*",
+    "del": "*",
+    "gulp": "*",
+    "node-notifier": "*",
+    "rollup": "*",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-uglify": "*"
   }
 }
